# velomania

./: .gitignore  Cargo.toml  README.md  simple_client.ipynb
.ipynb_checkpoints/: simple_client-checkpoint.ipynb
backend/: Cargo.toml
backend/src/: bk_gatts_service.rs  ble_client.rs  cli.rs  common.rs  indoor_bike_client.rs  indoor_bike_data_defs.rs  main.rs  scalar_converter.rs  web_endpoints.rs  workout_state.rs  workout_state_ws.rs  zwo_workout.rs
backend/src/front/: tui.rs
backend/tls/: cert.pem  key.pem
backend/workouts/12wk_ftp_base/week1/: 1.zwo  4.zwo
backend/workouts/12wk_ftp_base/week10/: 1.zwo  3.zwo  4.zwo  5.zwo
backend/workouts/12wk_ftp_base/week11/: 1.zwo  2.zwo  3.zwo  4.zwo  5.zwo
backend/workouts/12wk_ftp_base/week12/: 4.zwo  5.zwo
backend/workouts/12wk_ftp_base/week2/: 1.zwo  3.zwo  5.zwo
backend/workouts/12wk_ftp_base/week3/: 2.zwo  4.zwo
backend/workouts/12wk_ftp_base/week4/: 1.zwo  2.zwo  4.zwo
backend/workouts/12wk_ftp_base/week5/: 2.zwo  5.zwo
backend/workouts/12wk_ftp_base/week6/: 1.zwo  2.zwo
backend/workouts/12wk_ftp_base/week7/: 1.zwo  2.zwo  4.zwo  5.zwo
backend/workouts/12wk_ftp_base/week8/: 2.zwo  4.zwo  5.zwo
backend/workouts/12wk_ftp_base/week9/: 1.zwo  4.zwo
fe-wasm/: Cargo.toml  LICENSE_MIT
fe-wasm/src/: gui.rs  lib.rs  utils.rs
src/: bk_gatts_service.rs  ble_client.rs  cli.rs  common.rs  fitness_machine_client.rs  indoor_bike_client.rs  indoor_bike_data_defs.rs  main.rs  web_endpoints.rs  workout_state.rs  workout_state_ws.rs  zwo_workout.rs  zwo_workout_file.rs  zwo_workout_steps.rs
src/front/: tui.rs
workouts/: New_Workout_2022_3_16_22_6_57.zwo  test.zwo  test_ramp_up.zwo
workouts/12wk_ftp_base/week1/: 2.zwo  3.zwo
workouts/12wk_ftp_base/week10/: 2.zwo
workouts/12wk_ftp_base/week12/: 2.zwo  3.zwo
workouts/12wk_ftp_base/week2/: 2.zwo  4.zwo
workouts/12wk_ftp_base/week3/: 1.zwo
workouts/12wk_ftp_base/week4/: 3.zwo
(+11 files in other folders)
