[package]
name = "velomania"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.9.1"
tokio = { version = "1.15.0", features = ["full"] }
log = "0.4.0"
env_logger = "0.8.4"
anyhow = "1.0.52"
futures = "0.3.19"
