[package]
name = "backend"
version.workspace = true
edition.workspace = true


[dependencies]
serde-xml-rs = "0.5.1"
serde = {version = "1.0.136", features = ["derive"] }
structopt = "0.3.26"
btleplug = "0.9.1"
tokio = { version = "1.15.0", features = ["full"] }
log = "0.4.0"
env_logger = "0.8.4"
anyhow = "1.0.52"
futures = "0.3.19"
uuid = "0.8.2"
clap = { version = "3.1.0", features=["derive"] }
signal-hook-async-std = "0.2.2"
signal-hook = "0.3.13"
byteorder = "1.4.3"
num-traits = "0.2.14"
num-derive = "0.3.3"
egui = "0.17.0"
termion = "1.5.6"
actix-web = { version = "4.2.1", features = ["rustls"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
serde_json = "1.0.91"
rustls = "0.20.7"
rustls-pemfile = "1.0.1"
actix-web-actors = "4.1"
actix = "0.13.0"

[dev-dependencies]
walkdir = "2.3.2"
